--- a/Maps/mapa.html
+++ b/Maps/mapa.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -18,15 +17,28 @@
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
-        var map = L.map('map').setView([-23.5505, -46.6333], 11); // Centraliza o mapa em São Paulo
+        // Inicializa o mapa centralizado em São Paulo
+        var map = L.map('map').setView([-23.5505, -46.6333], 11); 
+
+        // Adiciona a camada de mapa do OpenStreetMap
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
 
-        fetch('bairros.json')
-            .then(response => response.json())
+        // Busca os dados GeoJSON do arquivo no GitHub
+        fetch('https://raw.githubusercontent.com/Mindful-AI-Assistants/SP2024-Election-Analysis/main/Maps/bairros.json')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+                return response.json();
+            })
             .then(data => {
+                // Adiciona os dados GeoJSON ao mapa
                 L.geoJSON(data).addTo(map);
+            })
+            .catch(error => {
+                console.error('Erro ao carregar o arquivo GeoJSON:', error);
             });
     </script>
 </body>
